--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
-theme: jekyll-theme-minimal
+# theme: jekyll-theme-minimal
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Ultimate Snake
 description: The official website
 markdown: kramdown
